@@ -21,7 +21,7 @@
 
 /* int [r3] strlen (char *s [r3])  */
 	.machine  power7
-ENTRY (strlen)
+EALIGN (__strlen_power7, 5, 0)
 	CALL_MCOUNT
 	dcbt	0,r3
 	clrrwi	r4,r3,2	      /* Align the address to word boundary.  */
@@ -91,5 +91,4 @@ L(done):
 	srwi	r0,r0,3	      /* Convert leading zeroes to bytes.  */
 	add	r3,r5,r0      /* Compute final length.  */
 	blr
-END (strlen)
-libc_hidden_builtin_def (strlen)
+END (__strlen_power7)
